--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -30,11 +30,11 @@ http_listener_port=8002
 
 ;; Set by Dreamgrid
 ; The URL of the Robust server
-BaseURL=http://10.6.1.103
+BaseURL=http://192.168.2.135
 
 ; The URL of the Robust server, if PublicPort and PrivatePort must be
 ; accessed via different hostnames as in the case of a NAT gateway
-PrivURL=http://10.6.1.103
+PrivURL=http://192.168.2.135
 
 ;; Set by Dreamgrid
 ; The public port of the Robust server
@@ -265,7 +265,7 @@ LocalServiceModule=OpenSim.Services.AssetService.dll:AssetService
 ;LocalServiceModule="OpenSim.Services.FSAssetService.dll:FSAssetConnector"
 ;; FSAsset Directories. Base directory, where final asset files are stored and Spool directory for temp files
 ;; These directories must be on the same physical filesystem
-BaseDirectory=C:\tmp\fsassets
+BaseDirectory=./fsassets/data
 SpoolDirectory=./fsassets/tmp
 
 ;; Original service can be checked if FSAssets can not find an asset
@@ -276,7 +276,7 @@ FallbackService=OpenSim.Services.AssetService.dll:AssetService
 DaysBetweenAccessTimeUpdates=30
 
 ;; Should FSAssets print read/write stats to the robust console, default is true
-ShowConsoleStats=True
+ShowConsoleStats=true
 
 ;; FSAssets Custom Database Config (Leave blank to use grids default database configuration)
 ;StorageProvider=
@@ -331,7 +331,7 @@ AssetService="OpenSim.Services.AssetService.dll:AssetService"
 ;; The syntax is: Region_<RegionName> = "<flags>"
 ;; or:            Region_<RegionID> = "<flags>"
 ;; Set by Dreamgrid
-Region_AlphaCentauriTrek="DefaultRegion, DefaultHGRegion, FallbackRegion"
+Region_Welcome="DefaultRegion, DefaultHGRegion, FallbackRegion"
 
 ;;
 ;; DefaultRegion    If a local login cannot be placed in the required region (e.g. home region does not exist, avatar is not allowed entry, etc.)
@@ -839,7 +839,7 @@ LocalServiceModule="OpenSim.Services.MuteListService.dll:MuteListService"
 [SMTP]
 SMTP_SERVER_HOSTNAME=smtp.gmail.com
 SMTP_SERVER_PORT=587
-SMTP_SERVER_LOGIN=
+SMTP_SERVER_LOGIN=Gmail for notification
 SMTP_SERVER_PASSWORD=Gmail password
 
 ; Automatically changed by Dreamworld - do not change this - Should be True ( case sensitive)
