Allow_osGetGridGatekeeperURI = true for HUD

--- a/OutworldzFiles/Opensim/bin/config-include/osslEnableDG.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/osslEnableDG.ini
@@ -132,7 +132,7 @@
   Allow_osDropAttachmentAt =        ${OSSL|osslParcelO}ESTATE_MANAGER,ESTATE_OWNER
   Allow_osGetAgentCountry =         ${OSSL|osslParcelO}ESTATE_MANAGER,ESTATE_OWNER
   Allow_osGetGridCustom =           ${OSSL|osslParcelO}ESTATE_MANAGER,ESTATE_OWNER
-  Allow_osGetGridGatekeeperURI =    ${OSSL|osslParcelO}ESTATE_MANAGER,ESTATE_OWNER
+  Allow_osGetGridGatekeeperURI =    true
   Allow_osGetGridHomeURI =          ${OSSL|osslParcelO}ESTATE_MANAGER,ESTATE_OWNER
   Allow_osGetGridLoginURI =         ${OSSL|osslParcelO}ESTATE_MANAGER,ESTATE_OWNER
   Allow_osGetGridName =             true
