--- a/OutworldzFiles/Apache/conf/httpd.conf
+++ b/OutworldzFiles/Apache/conf/httpd.conf
@@ -36,7 +36,7 @@
 
 
 # changed by Dreamgrid
-ServerRoot "O:/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache"
+ServerRoot "O:/Opensim/Outworldz_Dreamgrid/Outworldzfiles/Apache"
 
 #
 # Mutex: Allows you to set the mutex mechanism and mutex file directory
@@ -57,7 +57,7 @@ ServerRoot "O:/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache"
 # prevent Apache from glomming onto all bound IP addresses.
 #
 #Listen 12.34.56.78:80
-Listen 80
+Listen 900
 
 #
 # Dynamic Shared Object (DSO) Support
@@ -213,14 +213,14 @@ LoadModule version_module modules/mod_version.so
 #LoadModule ssl_module modules/mod_ssl.so
 
 #PHP
-LoadModule php5_module "O:/Opensim/Outworldz Dreamgrid/Outworldzfiles/PHP5/php5apache2_4.dll"
+LoadModule php5_module "O:/Opensim/Outworldz_Dreamgrid/Outworldzfiles/PHP5/php5apache2_4.dll"
 <FilesMatch \.php$>
       SetHandler application/x-httpd-php
 </FilesMatch>
 
 # configure the path to php.ini
 # changed by Dreamgrid
-PHPIniDir "O:/Opensim/Outworldz Dreamgrid/Outworldzfiles/PHP5"
+PHPIniDir "O:/Opensim/Outworldz_Dreamgrid/Outworldzfiles/PHP5"
 
 
 
@@ -264,7 +264,7 @@ ServerAdmin not@set.yet
 # If your host doesn't have a registered DNS name, enter its IP address here.
 #
 # changed by Dreamgrid
-ServerName 192.168.2.140
+ServerName 192.168.2.135
 
 # This fixes a bug with the OS
 AcceptFilter http none
@@ -301,7 +301,8 @@ TimeOut 5000
 # symbolic links and aliases may be used to point to other locations.
 #
 # changed by Dreamgrid
-DocumentRoot "O:/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/htdocs"
+DocumentRoot "O:/Opensim/Outworldz_Dreamgrid/Outworldzfiles/Apache/htdocs"
+
 
 <Macro VDir $root>
 <Directory "$root">
@@ -340,7 +341,7 @@ Require all granted
 
 # must be flush aligned left
 # changed by Dreamgrid
-Use VDir "O:/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/htdocs"
+Use VDir "O:/Opensim/Outworldz_Dreamgrid/Outworldzfiles/Apache/htdocs"
 
 #
 # DirectoryIndex: sets the file that Apache will serve if a directory
@@ -354,16 +355,13 @@ RewriteEngine  on
 RewriteRule "(^|/)\.(?!well-known\/)" - [F]
 
 
-<VirtualHost *:80>
+<VirtualHost   *:900>
 Timeout 5000
 
-# must be flush aligned left
-# changed by Dreamgrid
-DocumentRoot "O:/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/htdocs"
 
 # must be flush aligned left
 # changed by Dreamgrid
-ServerName 192.168.2.140
+ServerName 192.168.2.135
 
 # in case you want a different URL for your servers Web site yet still have Apache on.
 #Redirect permanent / https://google.com
@@ -403,7 +401,7 @@ LogLevel warn
 
 # changed by Dreamgrid
 # must be flush aligned left
-ErrorLog "|bin/rotatelogs.exe  -l \"O:/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/logs/Error-%Y-%m-%d.log\" 86400"
+ErrorLog "|bin/rotatelogs.exe  -l \"O:/Opensim/Outworldz_Dreamgrid/Outworldzfiles/Apache/logs/Error-%Y-%m-%d.log\" 86400"
  
     #
     # The location and format of the access logfile (Common Logfile Format).
@@ -415,7 +413,7 @@ ErrorLog "|bin/rotatelogs.exe  -l \"O:/Opensim/Outworldz Dreamgrid/Outworldzfile
 # must be flush aligned left
 # changed by Dreamgrid
 
-CustomLog "|bin/rotatelogs.exe -l \"O:/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/logs/access-%Y-%m-%d.log\" 86400" common env=!dontlog"
+CustomLog "|bin/rotatelogs.exe -l \"O:/Opensim/Outworldz_Dreamgrid/Outworldzfiles/Apache/logs/access-%Y-%m-%d.log\" 86400" common env=!dontlog"
 
 # changed by Dreamgrid
 #CustomLog "|bin/rotatelogs.exe -l c:/log/apache/access-%Y-%m-%d.log 86400" common env=!dontlog
