Search can be disabled Add more maps to search page Add error404 rm Drag and Drop <useLegacyJit enabled="1" />

--- a/OutworldzFiles/Apache/conf/httpd.conf
+++ b/OutworldzFiles/Apache/conf/httpd.conf
@@ -57,7 +57,7 @@ ServerRoot "O:/Opensim/Outworldz_Dreamgrid/Outworldzfiles/Apache"
 # prevent Apache from glomming onto all bound IP addresses.
 #
 #Listen 12.34.56.78:80
-Listen 900
+Listen 8000
 
 #
 # Dynamic Shared Object (DSO) Support
@@ -264,7 +264,7 @@ ServerAdmin not@set.yet
 # If your host doesn't have a registered DNS name, enter its IP address here.
 #
 # changed by Dreamgrid
-ServerName 192.168.2.135
+ServerName 127.0.0.1
 
 # This fixes a bug with the OS
 AcceptFilter http none
@@ -285,8 +285,9 @@ TimeOut 5000
 # <Directory> blocks below.
 #
 <Directory />
-    AllowOverride none
+    AllowOverride FileInfo
     Require all denied
+    ErrorDocument 404 /error404.htm
 </Directory>
 
 #
@@ -355,13 +356,13 @@ RewriteEngine  on
 RewriteRule "(^|/)\.(?!well-known\/)" - [F]
 
 
-<VirtualHost   *:900>
+<VirtualHost   *:8000>
 Timeout 5000
 
 
 # must be flush aligned left
 # changed by Dreamgrid
-ServerName 192.168.2.135
+ServerName 127.0.0.1
 
 # in case you want a different URL for your servers Web site yet still have Apache on.
 #Redirect permanent / https://google.com
@@ -530,10 +531,10 @@ MIMEMagicFile conf/magic
 # Customizable error responses come in three flavors:
 # 1) plain text 2) local redirects 3) external redirects
 #
-ErrorDocument 500 "The server made a boo boo."
+#ErrorDocument 500 "The server made a boo boo."
+#ErrorDocument 404 "oops"
+#ErrorDocument 404 /error404.htm
 
-# Some examples:
-#ErrorDocument 404 error404.htm
 #ErrorDocument 404 "/cgi-bin/missing_handler.pl"
 #ErrorDocument 402 http://www.example.com/subscription_info.html
 #
@@ -554,8 +555,9 @@ ErrorDocument 500 "The server made a boo boo."
 # broken on your system.
 # Defaults: EnableMMAP On, EnableSendfile Off
 #
-#EnableMMAP off
-#EnableSendfile off
+EnableMMAP on
+EnableSendfile on
+
 
 # Supplemental configuration
 #
