--- a/OutworldzFiles/Apache/conf/extra/httpd-ssl.conf
+++ b/OutworldzFiles/Apache/conf/extra/httpd-ssl.conf
@@ -76,8 +76,7 @@ SSLHonorCipherOrder on
 #   to use and second the expiring timeout (in seconds).
 
 # changed by Dreamgrid
-SSLSessionCache         shmcb:"O:/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/logs/ssl_scache(512000)"
-SSLSessionCacheTimeout  300
+SSLSessionCache shmcb:"O:/Opensim/Outworldz_Dreamgrid/Outworldzfiles/Apache/logs/ssl_scache(512000)"
 SSLProtocol all -SSLv2 -SSLv3 -TLSv1 -TLSv1.1
 
 ##
@@ -90,7 +89,7 @@ SSLProtocol all -SSLv2 -SSLv3 -TLSv1 -TLSv1.1
 # changed by Dreamgrid
 DocumentRoot "O:/Opensim/Outworldz_Dreamgrid/Outworldzfiles/Apache/htdocs"
 # changed by Dreamgrid
-ServerName 192.168.2.135
+ServerName mach.outworldz.net
 
 ServerAdmin not@set.yet
 
