--- a/OutworldzFiles/Apache/conf/httpd.conf
+++ b/OutworldzFiles/Apache/conf/httpd.conf
@@ -57,7 +57,7 @@ ServerRoot "O:/Opensim/Outworldz_Dreamgrid/Outworldzfiles/Apache"
 # prevent Apache from glomming onto all bound IP addresses.
 #
 #Listen 12.34.56.78:80
-Listen 8000
+Listen 7000
 
 #
 # Dynamic Shared Object (DSO) Support
@@ -170,7 +170,7 @@ LoadModule lbmethod_byrequests_module modules/mod_lbmethod_byrequests.so
   </filesmatch>
 </ifmodule>
  
-LoadModule mime_magic_module modules/mod_mime_magic.so
+#LoadModule mime_magic_module modules/mod_mime_magic.so
 LoadModule negotiation_module modules/mod_negotiation.so
 #LoadModule proxy_ajp_module modules/mod_proxy_ajp.so
 #LoadModule proxy_connect_module modules/mod_proxy_connect.so
@@ -264,7 +264,7 @@ ServerAdmin not@set.yet
 # If your host doesn't have a registered DNS name, enter its IP address here.
 #
 # changed by Dreamgrid
-ServerName 127.0.0.1
+ServerName mach.outworldz.net
 
 # This fixes a bug with the OS
 AcceptFilter http none
@@ -274,7 +274,6 @@ ThreadsPerChild 200
 MaxRequestsPerChild 1000000
 
 KeepAlive On
-# 5 seconds
 KeepAliveTimeout 5000
 MaxKeepAliveRequests 5000
 TimeOut 5000  
@@ -308,7 +307,7 @@ DocumentRoot "O:/Opensim/Outworldz_Dreamgrid/Outworldzfiles/Apache/htdocs"
 <Macro VDir $root>
 <Directory "$root">
 
-#
+
 # Possible values for the Options directive are "None", "All",
 # or any combination of:
 #   Indexes Includes FollowSymLinks SymLinksifOwnerMatch ExecCGI MultiViews
@@ -321,20 +320,20 @@ DocumentRoot "O:/Opensim/Outworldz_Dreamgrid/Outworldzfiles/Apache/htdocs"
 # for more information.
 
 Options Includes ExecCGI
-
+    
 #
 # AllowOverride controls what directives may be placed in .htaccess files.
 # It can be "All", "None", or any combination of the keywords:
 #   AllowOverride FileInfo AuthConfig Limit
 #
-AllowOverride None
+AllowOverride All
 
 #
 # Controls who can get stuff from this server.
 #
 Require all granted
 
-# EXcample blacklist an IP Address
+# Example way to blacklist an IP Address
 #Deny from  113.91.67.84/255.255.255.0    # chinese bot as one example
 
 </Directory>
@@ -356,13 +355,13 @@ RewriteEngine  on
 RewriteRule "(^|/)\.(?!well-known\/)" - [F]
 
 
-<VirtualHost   *:8000>
+<VirtualHost   *:7000>
 Timeout 5000
 
 
 # must be flush aligned left
 # changed by Dreamgrid
-ServerName 127.0.0.1
+ServerName mach.outworldz.net
 
 # in case you want a different URL for your servers Web site yet still have Apache on.
 #Redirect permanent / https://google.com
@@ -413,20 +412,14 @@ ErrorLog "|bin/rotatelogs.exe  -l \"O:/Opensim/Outworldz_Dreamgrid/Outworldzfile
     #
 # must be flush aligned left
 # changed by Dreamgrid
-
 CustomLog "|bin/rotatelogs.exe -l \"O:/Opensim/Outworldz_Dreamgrid/Outworldzfiles/Apache/logs/access-%Y-%m-%d.log\" 86400" common env=!dontlog"
 
-# changed by Dreamgrid
-#CustomLog "|bin/rotatelogs.exe -l c:/log/apache/access-%Y-%m-%d.log 86400" common env=!dontlog
-#CustomLog "|bin/rotatelogs.exe -l C:/Opensim/Outworldz Dreamgrid/Outworldzfiles/Apache/logs/access-%Y-%m-%d.log 86400" common
-#env=!dontlog
 
     #
     # If you prefer a logfile with access, agent, and referer information
     # (Combined Logfile Format) you can use the following directive.
     #
 	#CustomLog "logs/access.log" combined
-	
 </IfModule>
 
 <IfModule alias_module>
@@ -436,7 +429,9 @@ CustomLog "|bin/rotatelogs.exe -l \"O:/Opensim/Outworldz_Dreamgrid/Outworldzfile
     # will make a new request for the document at its new location.
     # Example:
     # Redirect permanent /foo http://www.example.com/bar
-	
+
+
+    #
     # Alias: Maps web paths into filesystem paths and is used to
     # access content that does not live under the DocumentRoot.
     # Example:
@@ -457,6 +452,14 @@ CustomLog "|bin/rotatelogs.exe -l \"O:/Opensim/Outworldz_Dreamgrid/Outworldzfile
     #
     #ScriptAlias /cgi-bin/ "c:/Apache24/cgi-bin/"
 
+</IfModule>
+
+<IfModule cgid_module>
+    #
+    # ScriptSock: On threaded servers, designate the path to the UNIX
+    # socket used to communicate with the CGI daemon of mod_cgid.
+    #
+    #Scriptsock cgisock
 </IfModule>
 
 #
@@ -505,7 +508,7 @@ CustomLog "|bin/rotatelogs.exe -l \"O:/Opensim/Outworldz_Dreamgrid/Outworldzfile
     #AddHandler cgi-script .cgi
 
     AddHandler cgi-script .plx .pl
-    AddHandler application/x-httpd-php .php 
+    AddHandler application/x-httpd-php .php
 
     # For type maps (negotiated resources):
     #AddHandler type-map var
@@ -525,7 +528,7 @@ CustomLog "|bin/rotatelogs.exe -l \"O:/Opensim/Outworldz_Dreamgrid/Outworldzfile
 # contents of the file itself to determine its type.  The MIMEMagicFile
 # directive tells the module where the hint definitions are located.
 #
-MIMEMagicFile conf/magic
+#MIMEMagicFile conf/magic
 
 #
 # Customizable error responses come in three flavors:
@@ -616,28 +619,28 @@ SSLRandomSeed connect builtin
 AcceptFilter http none
 AcceptFilter https none
 
-<IfModule headers_module>
-    <IfVersion >= 2.4.7 >
-        Header always setifempty X-Frame-Options SAMEORIGIN
-    </IfVersion>
-    <IfVersion < 2.4.7 >
-        Header always merge X-Frame-Options SAMEORIGIN
-    </IfVersion>
-    RequestHeader unset Proxy
-</IfModule>
+#<IfModule headers_module>
+#    <IfVersion >= 2.4.7 >
+#        Header always setifempty X-Frame-Options SAMEORIGIN
+#    </IfVersion>
+#    <IfVersion < 2.4.7 >
+#        Header always merge X-Frame-Options SAMEORIGIN
+#    </IfVersion>
+#    RequestHeader unset Proxy
+#</IfModule>
 
 # The following lines prevent .user.ini PHP settings files from being viewed by Web clients.
-<Files ".user.ini">
-
-<IfVersion < 2.3 >
-    Order allow,deny
-    Deny from all
-</IfVersion>
-<IfVersion >= 2.3>
-    Require all denied
-</IfVersion>
-
-</Files>
+#<Files ".user.ini">
+#
+#<IfVersion < 2.3 >
+#    Order allow,deny
+#    Deny from all
+#</IfVersion>
+#<IfVersion >= 2.3>
+#    Require all denied
+#</IfVersion>
+#
+#</Files>
 
 
 <IfModule expires_module>
@@ -679,5 +682,5 @@ ServerTokens Prod
 TraceEnable Off
 
  #<IfModule mpm_winnt_module>
-    ThreadStackSize 8888888
+#    ThreadStackSize 8888888
 #</IfModule>
