--- a/OutworldzFiles/Opensim/bin/OpenSim.exe.config
+++ b/OutworldzFiles/Opensim/bin/OpenSim.exe.config
@@ -5,7 +5,7 @@
   </configSections>
   <runtime>
     <loadFromRemoteSources enabled="true" />
-    <useLegacyJit enabled="1" />
+    <!--<useLegacyJit enabled="1" />-->
   </runtime>
   <appSettings>
   </appSettings>
