--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -26,11 +26,11 @@
 ;; Set by Dreamgrid
 ; ${Const|GridName}
 GridName=DreamGrid
-http_listener_port=7002
+http_listener_port=8002
 
 ;; Set by Dreamgrid
 ; The URL of the Robust server
-BaseURL=http://mach.outworldz.net
+BaseURL=http://192.168.2.135
 
 ; The URL of the Robust server, if PublicPort and PrivatePort must be
 ; accessed via different hostnames as in the case of a NAT gateway
@@ -38,11 +38,11 @@ PrivURL=http://192.168.2.135
 
 ;; Set by Dreamgrid
 ; The public port of the Robust server
-PublicPort=7002
+PublicPort=8002
 
 ;; Set by Dreamgrid
 ; The private port of the Robust server
-PrivatePort=7003
+PrivatePort=8003
 DiagnosticsPort=8001
 
 ; * The startup section lists all the connectors to start up in this server
@@ -518,7 +518,7 @@ MapTileURL="${Const|BaseURL}:${Const|PublicPort}/";
 
 ; Url to search service
 ;SearchURL=http://www.hyperica.com/Search/query.php
-SearchURL=${Const|BaseURL}:7000/Search/query.php
+SearchURL=http://www.hyperica.com/Search/query.php
 
 ; For V3 destination guide
 DestinationGuide="http://www.hyperica.com/destination-guide/"
@@ -615,7 +615,7 @@ gridnick=${Const|GridName}
 ; login page: optional: if it exists it will be used to tell the client to use
 ;                       this as splash page
 ;; Set by Dreamgrid
-welcome=http://www.outworldz.com/Outworldz_installer/Welcome.htm
+welcome=https://outworldz.com/Outworldz_installer/Welcome.htm
 
 ; helper uri: optional: if it exists it will be used to tell the client to use
 ;                       this for all economy related things
