--- a/OutworldzFiles/Mysql/my.ini
+++ b/OutworldzFiles/Mysql/my.ini
@@ -100,7 +100,7 @@ max_connections=500
 # Note: In case your tables change very often or if your queries are
 # textually different every time, the query cache may result in a
 # slowdown instead of a performance improvement.
-query_cache_size=0
+query_cache_size=8M
 
 # The number of open tables for all threads. Increasing this value
 # increases the number of file descriptors that mysqld requires.
