--- a/Installer_Src/Setup DreamWorld/packages.config
+++ b/Installer_Src/Setup DreamWorld/packages.config
@@ -1,14 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DotNetZip" version="1.11.0" targetFramework="net452" />
+  <package id="BouncyCastle" version="1.8.5" targetFramework="net461" />
+  <package id="DotNetZip" version="1.13.4" targetFramework="net461" />
+  <package id="Google.Protobuf" version="3.9.1" targetFramework="net461" />
   <package id="ini-parser" version="2.5.2" targetFramework="net40" />
-  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.2" targetFramework="net46" />
-  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.2" targetFramework="net46" />
-  <package id="Microsoft.CodeQuality.Analyzers" version="2.9.2" targetFramework="net46" />
-  <package id="Microsoft.NetCore.Analyzers" version="2.9.2" targetFramework="net46" />
-  <package id="Microsoft.NetFramework.Analyzers" version="2.9.2" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.4" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.4" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.CodeQuality.Analyzers" version="2.9.4" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.NetCore.Analyzers" version="2.9.4" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.NetFramework.Analyzers" version="2.9.4" targetFramework="net461" developmentDependency="true" />
   <package id="MSChartWrapper" version="1.0.0.1" targetFramework="net46" />
-  <package id="MySql.Data" version="6.10.7" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
+  <package id="MySql.Data" version="8.0.17" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
+  <package id="SSH.NET" version="2016.1.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net46" />
 </packages>
