Disallow Foreignersd and Disallow

--- a/OutworldzFiles/Opensim/bin/config-include/GridCommon-MetroServer.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/GridCommon-MetroServer.ini
@@ -221,7 +221,9 @@ ConnectionString = "Data Source=localhost;Database=opensim;User ID=opensim;Passw
     ; DisallowForeigners -- HG visitors not allowed
     ; DisallowResidents -- only Admins and Managers allowed
     ; Example:
-    ; Region_Test_1 = "DisallowForeigners"
+; START
+ Region_Test_1 = "DisallowForeigners"
+; END
 
 [MuteListService]
     MuteListServerURI = "http://mutelist.metro.land"
