--- a/OutworldzFiles/Opensim/bin/config-include/GridCommon-OsGridServer.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/GridCommon-OsGridServer.ini
@@ -224,5 +224,6 @@
     ; DisallowForeigners -- HG visitors not allowed
     ; DisallowResidents -- only Admins and Managers allowed
     ; Example:
-    ; Region_Test_1 = "DisallowForeigners"
-
+; START
+ Region_Test_1 = "DisallowForeigners"
+; END
