--- a/OutworldzFiles/Opensim/bin/config-include/GridCommon-RegionServer.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/GridCommon-RegionServer.ini
@@ -240,8 +240,9 @@ MapImageServerURI="${Const|BaseURL}:${Const|PrivatePort}"
 ; Valid flags are:
 ; DisallowForeigners -- HG visitors not allowed
 ; DisallowResidents -- only Admins and Managers allowed
-; Example:
-; Region_Test_1 = "DisallowForeigners"
+; START
+ Region_Test_1 = "DisallowForeigners"
+; END
 ;; Uncomment if you are using SimianGrid for grid services
 [SimianGrid]
 
