--- a/OutworldzFiles/Opensim/bin/config-include/GridCommon-GridServer.ini
+++ b/OutworldzFiles/Opensim/bin/config-include/GridCommon-GridServer.ini
@@ -188,7 +188,9 @@ Gatekeeper="${Const|BaseURL}:${Const|PublicPort}"
 ;; If you want to protect your assets from being copied by foreign visitors
 ;; set this to false. You may want to do this on sims that have licensed content.
 ;; Default is true.
-; OutboundPermission = True
+OutboundPermission = True
+
+
 ;; Send visual reminder to local users that their inventories are unavailable while they are traveling
 ;; and available when they return. True by default.
 ;RestrictInventoryAccessAbroad = True
@@ -241,8 +243,11 @@ MapImageServerURI="${Const|PrivURL}:${Const|PrivatePort}"
 ; Valid flags are:
 ; DisallowForeigners -- HG visitors not allowed
 ; DisallowResidents -- only Admins and Managers allowed
-; Example:
-; Region_Test_1 = "DisallowForeigners"
+; START
+ Region_Test_1 = "DisallowForeigners"
+; END
+
+
 ;; Uncomment if you are using SimianGrid for grid services
 [SimianGrid]
 
