--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -757,6 +757,7 @@
     <None Include="Resources\media_rewind.png" />
     <None Include="Resources\Arrow2Right.png" />
     <None Include="Resources\Arrow2Left.png" />
+    <None Include="Resources\home.png" />
     <Content Include="Resources\wp_habitat.gif" />
     <Content Include="Resources\wp_Inside_in_shadows.gif" />
     <Content Include="Resources\wp_Mooferd.gif" />
