Embed Zip.dll, PHP7 Signd

--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -758,6 +758,7 @@
     <None Include="Resources\Arrow2Right.png" />
     <None Include="Resources\Arrow2Left.png" />
     <None Include="Resources\home.png" />
+    <None Include="Resources\DotNetZip.dll" />
     <Content Include="Resources\wp_habitat.gif" />
     <Content Include="Resources\wp_Inside_in_shadows.gif" />
     <Content Include="Resources\wp_Mooferd.gif" />
