--- a/OutworldzFiles/PHP7/php.ini
+++ b/OutworldzFiles/PHP7/php.ini
@@ -742,7 +742,7 @@ default_charset = "UTF-8"
 ; see documentation for security issues.  The alternate is to use the
 ; cgi.force_redirect configuration below
 ; http://php.net/doc-root
-doc_root =
+doc_root  = "O:/Opensim/Outworldz_Dreamgrid/OutworldzFiles/Apache/htdocs"
 
 ; The directory under which PHP opens the script using /~username used only
 ; if nonempty.
@@ -753,7 +753,7 @@ user_dir =
 ; http://php.net/extension-dir
 ;extension_dir = "./"
 ; On windows:
-extension_dir  = "O:/Opensim/Outworldz_Dreamgrid/OutworldzFiles/PHP7/ext"
+extension_dir  = './ext'
 
 ; Directory where the temporary files should be placed.
 ; Defaults to the system default (see sys_get_temp_dir)
