--- a/OutworldzFiles/PHP7/php.ini
+++ b/OutworldzFiles/PHP7/php.ini
@@ -753,7 +753,7 @@ user_dir =
 ; http://php.net/extension-dir
 ;extension_dir = "./"
 ; On windows:
-extension_dir  = "O:/Opensim/Outworldz_Dreamgrid/OutworldzFiles/PHP7/ext"
+extension_dir = "./ext"
 
 ; Directory where the temporary files should be placed.
 ; Defaults to the system default (see sys_get_temp_dir)
