--- a/OutworldzFiles/Opensim/bin/Wifi.ini
+++ b/OutworldzFiles/Opensim/bin/Wifi.ini
@@ -12,13 +12,14 @@ Enabled=True
 ;; Set this to a port, possibly using one of the ports defined in the host config file
 ;ServerPort = 8002 or ${Const|PublicPort}
 GridName=DreamGrid
-LoginURL=http://192.168.2.135:8002
-WebAddress=http://192.168.2.135:8002
+LoginURL=http://10.6.1.14:8002
+WebAddress=http://10.6.1.14:8002
 
 ;; The Wifi Administrator account
 AdminFirst=Wifi
 AdminLast=Admin
 AdminEmail=email@somewhere.com
+AdminPassword=xlf3lr
 
 ;; Do you want to be able to control grid registrations?
 AccountConfirmationRequired=true
@@ -26,9 +27,10 @@ AccountConfirmationRequired=true
 ;; Time interval in seconds for updating statistics data for variables like
 ;; UsersInworld, UsersTotal, and RegionsTotal.
 ;; Default value 0 disables data updates.
-; StatisticsUpdateInterval = 60
+StatisticsUpdateInterval = 60
 ;; Period in days for computing the number of active users
-; StatisticsActiveUsersPeriod = 30
+StatisticsActiveUsersPeriod = 30
+
 ;; Default avatars for new account registration
 ;; Syntax: AvatarAccount_<AvatarType> = "<FirstName> <LastName>"
 ;;         (replace spaces in <AvatarType> with underscore)
@@ -43,6 +45,8 @@ AvatarPreselection="Neutral"
 ;; Home location for new accounts
 ;; If empty or not set, then the selected default avatar's home location is used.
 ; HomeLocation = "<RegionName>/<X>/<Y>/<Z>"
+HomeLocation=Welcome/128/128/24
+
 ;; Accounts with this or a higher user level are able to create links to
 ;; hypergrid regions. Other users are only able to view existing hyperlinks.
 HyperlinkServiceUserLevel=50
@@ -54,7 +58,7 @@ HyperlinkServiceUsersSeeAll=true
 ;; Users will get email notifications from this account
 SmtpHost=smtp.gmail.com
 SmtpPort=587
-SmtpUsername="your_account_in_this_mail_server"
+SmtpUsername=
 SmtpPassword=Gmail password
 
 ;; If mono certificates are griefing you, you may bypass certificate verification, but
@@ -68,6 +72,7 @@ SmtpPassword=Gmail password
 ;; They will be placed there on the first run of Wifi. You can then change them.
 ;; Leave this unchanged unless you know what you're doing.
 ;; UserDocsPath = ".."
+
 ;; Additionally served resources
 ;; Syntax: ServePath_<Name> = "<Local Path>, <Resource Path>"
 ;;         (<Name> is an arbitrary identifier.)
@@ -75,6 +80,5 @@ SmtpPassword=Gmail password
 ;; base folder "bin" can be accessed via path <WebAddress>/bin/data/, e.g.
 ;; http://localhost:8002/bin/data/prototype.js.
 ServePath_BinData="data, /bin/data"
-AdminPassword=3wG8tR
-SmtPropUserName=Gmail for notification
-HomeLocation=0/128/128/24
+
+
