--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -510,7 +510,7 @@ Currency="G$"
 ClassifiedFee=0
 
 ;;
-WelcomeMessage=Welcome to DreamGrid
+WelcomeMessage=Welcome to DreamGrid , <USERNAME>
 AllowRemoteSetLoginLevel="false"
 
 ; For V2 map
@@ -845,4 +845,7 @@ SMTP_SERVER_PASSWORD=Gmail password
 ;; Set to True to enable Smart Start
 ;; Set by Dreamgrid
 [AutoLoadTeleport]
+Enabled=False
+
+[SmartStart]
 Enabled=False
