--- a/Installer_Src/Setup DreamWorld/packages.config
+++ b/Installer_Src/Setup DreamWorld/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.5" targetFramework="net461" />
+  <package id="DotNetZip" version="1.11.0" targetFramework="net461" />
   <package id="Google.Protobuf" version="3.9.2" targetFramework="net461" />
   <package id="ini-parser" version="2.5.2" targetFramework="net40" />
-  <package id="Ionic.Zip" version="1.9.1.8" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.9.4" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="2.9.4" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.CodeQuality.Analyzers" version="2.9.4" targetFramework="net461" developmentDependency="true" />
