--- a/Updater_Src/Updater-II/Updater.vbproj
+++ b/Updater_Src/Updater-II/Updater.vbproj
@@ -96,8 +96,8 @@
     <ApplicationIcon>cubes_blue.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DotNetZip, Version=1.11.0.0, Culture=neutral, PublicKeyToken=6583c7c814667745, processorArchitecture=MSIL">
-      <HintPath>packages\DotNetZip.1.11.0\lib\net20\DotNetZip.dll</HintPath>
+    <Reference Include="Ionic.Zip, Version=1.9.1.8, Culture=neutral, PublicKeyToken=edbe51ad942a3f5c, processorArchitecture=MSIL">
+      <HintPath>packages\Ionic.Zip.1.9.1.8\lib\Ionic.Zip.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -184,6 +184,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="cubes_blue.ico" />
+    <None Include="packages\Ionic.Zip.1.9.1.8\lib\Ionic.Zip.dll" />
     <None Include="packages.config" />
     <None Include="Resources\DotNetZip.dll" />
   </ItemGroup>
