--- a/Updater_Src/Updater-II/packages.config
+++ b/Updater_Src/Updater-II/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DotNetZip" version="1.11.0" targetFramework="net461" />
+  <package id="Ionic.Zip" version="1.9.1.8" targetFramework="net461" />
 </packages>
