--- a/Updater_Src/Updater-II/Updater.vbproj
+++ b/Updater_Src/Updater-II/Updater.vbproj
@@ -98,6 +98,8 @@
   <ItemGroup>
     <Reference Include="Ionic.Zip, Version=1.9.1.8, Culture=neutral, PublicKeyToken=edbe51ad942a3f5c, processorArchitecture=MSIL">
       <HintPath>packages\Ionic.Zip.1.9.1.8\lib\Ionic.Zip.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -139,6 +141,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Resources\Core.vb" />
     <Compile Include="UpdateGrid.Designer.vb">
       <DependentUpon>UpdateGrid.vb</DependentUpon>
     </Compile>
@@ -186,8 +189,8 @@
     <Content Include="cubes_blue.ico" />
     <None Include="packages\Ionic.Zip.1.9.1.8\lib\Ionic.Zip.dll" />
     <None Include="packages.config" />
-    <None Include="Resources\DotNetZip.dll" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
