--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -25,12 +25,12 @@
 
 ;; Set by Dreamgrid
 ; ${Const|GridName}
-GridName=DreamGridMach
+GridName=DreamGrid
 http_listener_port=8002
 
 ;; Set by Dreamgrid
 ; The URL of the Robust server
-BaseURL=http://mach.outworldz.net
+BaseURL=http://192.168.2.135
 
 ; The URL of the Robust server, if PublicPort and PrivatePort must be
 ; accessed via different hostnames as in the case of a NAT gateway
@@ -510,7 +510,7 @@ Currency="G$"
 ClassifiedFee=0
 
 ;;
-WelcomeMessage=Welcome to DreamGridMach , <USERNAME>
+WelcomeMessage=Welcome to DreamGrid , <USERNAME>
 AllowRemoteSetLoginLevel="false"
 
 ; For V2 map
