--- a/OutworldzFiles/Opensim/bin/Wifi.ini
+++ b/OutworldzFiles/Opensim/bin/Wifi.ini
@@ -11,9 +11,9 @@ Enabled=True
 
 ;; Set this to a port, possibly using one of the ports defined in the host config file
 ;ServerPort = 8002 or ${Const|PublicPort}
-GridName=DreamGridMach
-LoginURL=http://mach.outworldz.net:8002
-WebAddress=http://mach.outworldz.net:8002
+GridName=DreamGrid
+LoginURL=http://192.168.2.135:8002
+WebAddress=http://192.168.2.135:8002
 
 ;; The Wifi Administrator account
 AdminFirst=Wifi
@@ -21,7 +21,7 @@ AdminLast=Admin
 AdminEmail=email@somewhere.com
 
 ;; Do you want to be able to control grid registrations?
-AccountConfirmationRequired=False
+AccountConfirmationRequired=True
 
 ;; Time interval in seconds for updating statistics data for variables like
 ;; UsersInworld, UsersTotal, and RegionsTotal.
@@ -75,5 +75,5 @@ SmtpPassword=Gmail password
 ;; base folder "bin" can be accessed via path <WebAddress>/bin/data/, e.g.
 ;; http://localhost:8002/bin/data/prototype.js.
 ServePath_BinData="data, /bin/data"
-AdminPassword=GUjRZN
+AdminPassword=6(W3&n
 HomeLocation=Welcome/128/128/24
