--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -574,6 +574,7 @@
     <EmbeddedResource Include="My Project\Resources.fr-FR.resx">
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="My Project\Resources.pt-PT.resx" />
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
@@ -652,6 +653,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="cubes.ico" />
+    <None Include="Resources\flag_brazil.png" />
+    <None Include="Resources\flag_france.png" />
+    <None Include="Resources\flag_usa.png" />
     <None Include="Resources\Better.jpg" />
     <None Include="Resources\map-1-9510-10006-objects.jpg" />
     <None Include="Resources\data.png" />
