--- a/Installer_Src/Setup DreamWorld/Start.vbproj
+++ b/Installer_Src/Setup DreamWorld/Start.vbproj
@@ -653,6 +653,25 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="cubes.ico" />
+    <None Include="Resources\catalan.png" />
+    <None Include="Resources\250px-Flag_of_the_Basque_Country.svg.png" />
+    <None Include="Resources\flag_sweden.png" />
+    <None Include="Resources\flag_spain.png" />
+    <None Include="Resources\flag_russia1.png" />
+    <None Include="Resources\flag_russia.png" />
+    <None Include="Resources\flag_norway.png" />
+    <None Include="Resources\flag_ireland.png" />
+    <None Include="Resources\flag_iceland.png" />
+    <None Include="Resources\flag_israel.png" />
+    <None Include="Resources\flag_greece.png" />
+    <None Include="Resources\flag_germany.png" />
+    <None Include="Resources\flag_finland.png" />
+    <None Include="Resources\flag_iran.png" />
+    <None Include="Resources\flag_netherlands.png" />
+    <None Include="Resources\flag_taiwan.png" />
+    <None Include="Resources\flag_china.png" />
+    <None Include="Resources\flag_czech_republic.png" />
+    <None Include="Resources\flag_saudi_arabia.png" />
     <None Include="Resources\flag_brazil.png" />
     <None Include="Resources\flag_france.png" />
     <None Include="Resources\flag_usa.png" />
